[FIXED MIFOS: 3388,3991,3994,3996,4092,4093,4094] - layout issues

--- a/userInterface/src/main/webapp/pages/css/main.css
+++ b/userInterface/src/main/webapp/pages/css/main.css
@@ -296,6 +296,10 @@ input[type="checkbox"], input.checkbox {
     margin-bottom: 15px;
 }
 
+.margin30bottom {
+    margin-bottom: 30px;
+}
+
 .margin10top {
     margin-top: 10px;
 }
